--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,27 +4,25 @@
     <head>
         <title>TP Arbre géanologique</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link href="css/styles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!--Section des grands-parents-->
         <div id="aieux">
-            
-            <div class="homme aieul">
-                <table>
-                    <th id="grPP"></th>
-                    <tr>
-                        <td class="pHomme"></td>
+                <table class="homme aieul">
+                    <tr class="center"> 
+                        <th colspan="3" id="grPp"></th>
                     </tr>
                     <tr>
+                        <td rowspan="2"><img id="symGp" alt=""></td>
                         <td id="ageGrPp"></td>
                         <td id="genrGrPp"></td>
                     </tr>
                     <tr>
-                        <td id="tafGrPp"></td>
+                        <td colspan="2" id="tafGrPp" class="center"></td>
                     </tr>
                 </table>
-            </div>
-            
+
             <!--div class="aieul"></div>
             <div class="aieul"></div>
             <div class="aieul"></div-->
@@ -49,8 +47,9 @@
         <div id="petitsenfants">
 
         </div>
-
+        <script src="js/person.js" type="text/javascript"></script>
+        <script src="js/arbre.js" type="text/javascript"></script>
     </body>
-    <script src="js/person.js" type="text/javascript"></script>
-    <script src="js/arbre.js" type="text/javascript"></script>
+
+
 </html>
