--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,54 +2,55 @@
 
 <html>
     <head>
-        <title>TP Arbre géanologique</title>
+        <title>POLLEN</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="css/styles.css" rel="stylesheet" type="text/css"/>
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <!--Section des grands-parents-->
-        <div id="aieux">
-                <table class="homme aieul">
-                    <tr class="center"> 
-                        <th colspan="3" id="grPp"></th>
-                    </tr>
-                    <tr>
-                        <td rowspan="2"><img id="symGp" alt=""></td>
-                        <td id="ageGrPp"></td>
-                        <td id="genrGrPp"></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2" id="tafGrPp" class="center"></td>
-                    </tr>
-                </table>
+        <div id="fond" class="container-fluid">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">POLLEN</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Page 1</a></li>
+                        <li><a href="#">Page 2</a></li>
+                        <li><a href="#">Page 3</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="col-md-3">
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        Grand-père
+                        <span class="caret"></span></button>
+                            <table class="dropdown-menu">
+                                <tr>
+                                
+                                    <td rowspan="2"><img src="img/graPerPatAv.png" alt=""/></td>
+                                    <td>Eddy</td>
+                                </tr>
+                                <tr>
+                                    <td>Mitchell</td>
+                                </tr>
+                            </table>
+                </div>
 
-            <!--div class="aieul"></div>
-            <div class="aieul"></div>
-            <div class="aieul"></div-->
-        </div>
-        <!--Section des parents-->
-        <div id="parents">
-            <div class="parent"></div>
-            <div class="parent"></div>
-        </div>
-        <!--Section des enfants-->
-        <div id="enfants">
-            <div class="enfant"></div>
-            <div class="enfant"></div>
-            <div class="enfant"></div>
-            <div class="enfant"></div>
-            <div class="enfant"></div>
-            <div class="enfant"></div>
-            <div class="enfant"></div>
-            <div class="enfant"></div>
-        </div>
-        <!--Section des petits enfants-->
-        <div id="petitsenfants">
 
+
+
+            </div>
+            <div class="col-md-3 col-md-offset-6">
+
+            </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"  crossorigin="anonymous"></script>
+        <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/person.js" type="text/javascript"></script>
         <script src="js/arbre.js" type="text/javascript"></script>
     </body>
-
 
 </html>
