--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,145 +21,143 @@
                     </ul>
                 </div>
             </nav>
-            
-            
-            <div class="row">
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img src="img/graPerPatAv.png" alt=""/></td>
-                            <td>Eddy</td>
-                        </tr>
-                        <tr>
-                            <td>Mitchell</td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img src="img/graMerAv.png" alt=""/></td>
-                            <td>Jackie</td>
-                        </tr>
-                        <tr>
-                            <td>Brown</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3 col-md-offset-6 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img src="img/graPerPatAv.png" alt=""/></td>
-                            <td>Eddy</td>
-                        </tr>
-                        <tr>
-                            <td>Mitchell</td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img src="img/graMerAv.png" alt=""/></td>
-                            <td>Jackie</td>
-                        </tr>
-                        <tr>
-                            <td>Brown</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img src="img/graPerPatAv.png" alt=""/></td>
-                            <td>Eddy</td>
-                        </tr>
-                        <tr>
-                            <td>Mitchell</td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img src="img/graMerAv.png" alt=""/></td>
-                            <td>Jackie</td>
-                        </tr>
-                        <tr>
-                            <td>Brown</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
-                            <td>Eddy</td>
-                        </tr>
-                        <tr>
-                            <td>Mitchell</td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img src="img/mereAv.png" alt=""/></td>
-                            <td>Jackie</td>
-                        </tr>
-                        <tr>
-                            <td>Brown</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
-                            <td>Eddy</td>
-                        </tr>
-                        <tr>
-                            <td>Mitchell</td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img src="img/mereAv.png" alt=""/></td>
-                            <td>Jackie</td>
-                        </tr>
-                        <tr>
-                            <td>Brown</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
-                            <td>Eddy</td>
-                        </tr>
-                        <tr>
-                            <td>Mitchell</td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img src="img/mereAv.png" alt=""/></td>
-                            <td>Jackie</td>
-                        </tr>
-                        <tr>
-                            <td>Brown</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
-                            <td>Eddy</td>
-                        </tr>
-                        <tr>
-                            <td>Mitchell</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
+            <!--            <div class="row">
+                            <div class="col-md-3 text-center">
+                                <table class="m">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/graPerPatAv.png" alt=""/></td>
+                                        <td>Eddy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mitchell</td>
+                                    </tr>
+                                </table>
+                                <table class="f">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/graMerAv.png" alt=""/></td>
+                                        <td>Jackie</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Brown</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="col-md-3 col-md-offset-6 text-center">
+                                <table class="m">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/graPerPatAv.png" alt=""/></td>
+                                        <td>Eddy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mitchell</td>
+                                    </tr>
+                                </table>
+                                <table class="f">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/graMerAv.png" alt=""/></td>
+                                        <td>Jackie</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Brown</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 col-md-offset-4 text-center">
+                                <table class="m">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/graPerPatAv.png" alt=""/></td>
+                                        <td>Eddy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mitchell</td>
+                                    </tr>
+                                </table>
+                                <table class="f">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/graMerAv.png" alt=""/></td>
+                                        <td>Jackie</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Brown</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 text-center">
+                                <table class="m">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
+                                        <td>Eddy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mitchell</td>
+                                    </tr>
+                                </table>
+                                <table class="f">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/mereAv.png" alt=""/></td>
+                                        <td>Jackie</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Brown</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <table class="m">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
+                                        <td>Eddy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mitchell</td>
+                                    </tr>
+                                </table>
+                                <table class="f">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/mereAv.png" alt=""/></td>
+                                        <td>Jackie</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Brown</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <table class="m">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
+                                        <td>Eddy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mitchell</td>
+                                    </tr>
+                                </table>
+                                <table class="f">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/mereAv.png" alt=""/></td>
+                                        <td>Jackie</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Brown</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <table class="m">
+                                    <tr>
+                                        <td rowspan="2"><img src="img/perAv.png" alt=""/></td>
+                                        <td>Eddy</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mitchell</td>
+                                    </tr>
+                                </table>
+                            </div-->
+                        </div>
             <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"  crossorigin="anonymous"></script>
             <script src="js/bootstrap.min.js" type="text/javascript"></script>
