Boucle à travers le tableau Famille

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css"/>
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body>
+    <body >
         <div id="fond" class="container-fluid">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
@@ -17,180 +17,231 @@
                 </div>
             </nav>
             <div class="row">
-                <div class="col-md-3 text-center">
-                    <table class="m">
+                <div class="col-md-3">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="granFa1" alt=""/></td>
-                            <td></td>
+                            <td id="granFa1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="granFa1img" alt=""/></td>
+                            <td id="granFa1age"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td id="granFa1taf"></td>
                         </tr>
                     </table>
-                    <table class="f">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="granMo1" alt=""/></td>
-                            <td></td>
+                            <td id="granMo1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="granMo1img" alt=""/></td>
+                            <td id="granMo1age"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td id="granMo1taf"></td>
                         </tr>
                     </table>
                 </div>
                 <div class="col-md-3 col-md-offset-6 text-center">
-                    <table class="m">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="granFa2" alt=""/></td>
-                            <td></td>
+                            <td id="granFa2name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="granFa2img" alt=""/></td>
+                            <td id="granFa2age"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td id="granFa2taf"></td>
                         </tr>
                     </table>
-                    <table class="f">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="granMo2" alt=""/></td>
-                            <td></td>
+                            <td id="granMo2name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="granMo2img" alt=""/></td>
+                            <td id="granMo2age"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td id="granMo2taf"></td>
                         </tr>
                     </table>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <table class="m">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="father1" alt=""/></td>
-                            <td></td>
+                            <td id="father1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="father1img" alt=""/></td>
+                            <td id="father1age"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img id="mother1" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
+                            <td id="father1taf"></td>
                         </tr>
                     </table>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 text-center">
-                    <table class="m">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="daughter1" alt=""/></td>
-                            <td></td>
+                            <td id="mother1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="mother1img" alt=""/></td>
+                            <td id="mother1age"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img id="sonInLaw1" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img id="daughter2" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img id="sonInLaw2" src="" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img id="son1" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img id="daughInLaw1" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3 text-center">
-                    <table class="m">
-                        <tr>
-                            <td rowspan="2"><img id="son2" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
+                            <td id="mother1taf"></td>
                         </tr>
                     </table>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 text-center">
-                    <table class="f">
+                   <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="grandaughter1" alt=""/></td>
-                            <td></td>
+                            <td id="daughter1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="daughter1img" alt=""/></td>
+                            <td id="daughter1age"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                        </tr>
-                    </table>
-                    <table class="f">
-                        <tr>
-                            <td rowspan="2"><img id="grandaughter2" alt=""/></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
+                            <td id="daughter1taf"></td>
                         </tr>
                     </table>
-                    <table class="m">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="granson1" alt=""/></td>
-                            <td></td>
+                            <td id="sonInLaw1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="sonInLaw1img" alt=""/></td>
+                            <td id="sonInLaw1age"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td id="sonInLaw1taf"></td>
                         </tr>
                     </table>
                 </div>
                 <div class="col-md-3 text-center">
-                    <table class="m">
+                    <table  class="m">
                         <tr>
-                            <td rowspan="2"><img id="grandaughter3" alt=""/></td>
-                            <td></td>
+                            <td id="daughter2name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="daughter2img" alt=""/></td>
+                            <td id="daughter2age"></td>
                         </tr>
                         <tr>
-                            <td></td>
+                            <td id="daughter2taf"></td>
+                        </tr>
+                    </table>
+                    <table  class="m">
+                        <tr>
+                            <td id="sonInLaw2name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="sonInLaw2img" alt=""/></td>
+                            <td id="sonInLaw2age"></td>
+                        </tr>
+                        <tr>
+                            <td id="sonInLaw2taf"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-3 text-center">
+                    <table  class="m">
+                        <tr>
+                            <td id="son1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="son1img" alt=""/></td>
+                            <td id="son1age"></td>
+                        </tr>
+                        <tr>
+                            <td id="son1taf"></td>
+                        </tr>
+                    </table>
+                    <table  class="m">
+                        <tr>
+                            <td id="daughInLaw1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="daughInLaw1img" alt=""/></td>
+                            <td id="daughInLaw1age"></td>
+                        </tr>
+                        <tr>
+                            <td id="daughInLaw1taf"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-3 text-center">
+                    <table  class="m">
+                        <tr>
+                            <td id="son2name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="son2img" alt=""/></td>
+                            <td id="son2age"></td>
+                        </tr>
+                        <tr>
+                            <td id="son2taf"></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 text-center">
+                    <table  class="m">
+                        <tr>
+                            <td id="grandaughter1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="grandaughter1img" alt=""/></td>
+                            <td id="grandaughter1age"></td>
+                        </tr>
+                        <tr>
+                            <td id="grandaughter1taf"></td>
+                        </tr>
+                    </table>
+                    <table  class="m">
+                        <tr>
+                            <td id="grandaughter2name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="grandaughter2img" alt=""/></td>
+                            <td id="grandaughter2age"></td>
+                        </tr>
+                        <tr>
+                            <td id="grandaughter2taf"></td>
+                        </tr>
+                    </table>
+                    <table  class="m">
+                        <tr>
+                            <td id="granson1name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="granson1img" alt=""/></td>
+                            <td id="granson1age"></td>
+                        </tr>
+                        <tr>
+                            <td id="granson1taf"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-3 text-center">
+                    <table  class="m">
+                        <tr>
+                            <td id="grandaughter3name" colspan="2" class="center"></td>
+                        </tr>
+                        <tr >
+                            <td rowspan="2"><img id="grandaughter3img" alt=""/></td>
+                            <td id="grandaughter3age"></td>
+                        </tr>
+                        <tr>
+                            <td id="grandaughter3taf"></td>
                         </tr>
                     </table>
                 </div>
