--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,7 @@
                 </div>
             </nav>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 text-center">
                     <table  class="m">
                         <tr>
                             <td id="granFa1name" colspan="2" class="center"></td>
@@ -30,7 +30,7 @@
                             <td id="granFa1taf"></td>
                         </tr>
                     </table>
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="granMo1name" colspan="2" class="center"></td>
                         </tr>
@@ -56,7 +56,7 @@
                             <td id="granFa2taf"></td>
                         </tr>
                     </table>
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="granMo2name" colspan="2" class="center"></td>
                         </tr>
@@ -84,7 +84,7 @@
                             <td id="father1taf"></td>
                         </tr>
                     </table>
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="mother1name" colspan="2" class="center"></td>
                         </tr>
@@ -100,7 +100,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3 text-center">
-                   <table  class="m">
+                   <table  class="f">
                         <tr>
                             <td id="daughter1name" colspan="2" class="center"></td>
                         </tr>
@@ -126,7 +126,7 @@
                     </table>
                 </div>
                 <div class="col-md-3 text-center">
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="daughter2name" colspan="2" class="center"></td>
                         </tr>
@@ -164,7 +164,7 @@
                             <td id="son1taf"></td>
                         </tr>
                     </table>
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="daughInLaw1name" colspan="2" class="center"></td>
                         </tr>
@@ -194,7 +194,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3 text-center">
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="grandaughter1name" colspan="2" class="center"></td>
                         </tr>
@@ -206,7 +206,7 @@
                             <td id="grandaughter1taf"></td>
                         </tr>
                     </table>
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="grandaughter2name" colspan="2" class="center"></td>
                         </tr>
@@ -232,7 +232,7 @@
                     </table>
                 </div>
                 <div class="col-md-3 text-center">
-                    <table  class="m">
+                    <table  class="f">
                         <tr>
                             <td id="grandaughter3name" colspan="2" class="center"></td>
                         </tr>
